final touch notebooks

--- a/notebooks/3D_center_prediction/evaluation_result_display.ipynb
+++ b/notebooks/3D_center_prediction/evaluation_result_display.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code segments displays the evaluations of the 3D center prediction and can be adjusted to whatever is needed. The display are simple dataframes"
+    "This notebook displays the evaluations of the 3D center prediction and can be adjusted if needed."
    ]
   },
   {
@@ -52,7 +52,7 @@
     "final_boxes.append(result.get( \"iou_boxes\", None))\n",
     "final_centers.append(result.get(\"mean_center_difference\", None))\n",
     "\n",
-    "\n",
+    "#evaluation parameters\n",
     "minimum_votes = [1,2,3,4,5,6] #adjust if needed\n",
     "minimum_points = [5,10,15,20,25,30,35,40,45,50,55,60] #adjust if needed\n",
     "\n",
