--- a/notebooks/3D_center_prediction/visualization_predicted_objects.ipynb
+++ b/notebooks/3D_center_prediction/visualization_predicted_objects.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/local/home/ekoller/BT\n",
-      "/local/home/ekoller/BT/utils\n",
-      "352e9c36-69fb-27a7-889f-69b450a22b74\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import plyfile\n",
@@ -27,29 +17,29 @@
     "\n",
     "import os.path as osp\n",
     "import sys\n",
-    "ws_dir = '/local/home/ekoller/BT'\n",
+    "ws_dir = '/local/home/ekoller/BT' #adjust this to your path\n",
     "print(ws_dir)\n",
     "sys.path.append(ws_dir)\n",
     "from utils import scan3r, od3du_utils\n",
     "\n",
-    "\n",
+    "#adjust the following paths\n",
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "files_dir = '/local/home/ekoller/R3Scan/files'\n",
     "\n",
-    "new_scan_id =   \"74ef846e-9dce-2d66-83d5-294aac7b1b0f\" #take whatever rescan scan ID you want\n",
-    "curr_scan_id = scan3r.get_reference_id(data_dir,new_scan_id)\n",
+    "new_scan_id =   \"74ef846e-9dce-2d66-83d5-294aac7b1b0f\" #take whatever test set rescan scan ID you want\n",
+    "curr_scan_id = scan3r.get_reference_id(data_dir,new_scan_id) # is the reference scene\n",
     "print(curr_scan_id)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#access the predicted reference objects in the rescan\n",
+    "#access the predicted reference objects from the final prediction\n",
     "def acces_predicted_objects(scan_id):\n",
     "    all_centers = {}\n",
     "    filename = osp.join(files_dir, \"Predicted_Centers\", scan_id + \".h5\")\n",
@@ -73,12 +63,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this segment displays the predicted pointcloud and the ground truth point cloud"
+    "this segment displays the predicted pointcloud and the ground truth point cloud/ mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +83,7 @@
     "#for the reference scan\n",
     "obj_colors_ref = od3du_utils.get_id_colours(data_dir, curr_scan_id)\n",
     "\n",
-    "# Iterate over all objects in predicted  all_centers\n",
+    "# Iterate over all objects in predicted 3D centers: all_centers\n",
     "for obj_id, data in all_centers.items():\n",
     "\n",
     "        if obj_id not in obj_colors:\n",
@@ -172,7 +162,7 @@
     "\n",
     "\n",
     "\n",
-    "\"\"\"  Choose what you want to visualize\n",
+    "\"\"\"  Choose what you want to visualize!!!\n",
     "\"\"\"\n",
     "\n",
     "# Visualize both together using Open3D: predicted_point_cloud (predicted with OD3DU), rescan_gt_mesh (the ground truth rescan mesh), reference_mesh ( the mesh of the reference scene)\n",
