--- a/notebooks/segment2object_matching/visualization_predicted_mask2object_matches.ipynb
+++ b/notebooks/segment2object_matching/visualization_predicted_mask2object_matches.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this notebook visualizes the following for each frame of the rescan: the predicted match between the segments and reference objects compared to the ground truth match which is excpected"
+    "this notebook visualizes for each frame of the rescan: the predicted match between the segments and reference objects compared to the ground truth match that is excpected"
    ]
   },
   {
@@ -21,16 +21,16 @@
     "import numpy as np\n",
     "import os.path as osp\n",
     "import sys\n",
-    "ws_dir = '/local/home/ekoller/BT'\n",
+    "ws_dir = '/local/home/ekoller/BT' #adjust\n",
     "print(ws_dir)\n",
     "sys.path.append(ws_dir)\n",
     "from utils import scan3r, od3du_utils\n",
     "\n",
-    "\n",
+    "#adjust the paths as needed\n",
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes' \n",
-    "new_scan_id =  \"74ef846e-9dce-2d66-83d5-294aac7b1b0f\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
-    "curr_scan_id = scan3r.get_reference_id(data_dir, new_scan_id)\n",
+    "new_scan_id =  \"74ef846e-9dce-2d66-83d5-294aac7b1b0f\" #choose whatever test rescan Id you want\n",
+    "curr_scan_id = scan3r.get_reference_id(data_dir, new_scan_id) #reference scene\n",
     "patch_h= 18\n",
     "image_height = 540\n",
     "image_width = 960\n",
@@ -74,21 +74,19 @@
    "outputs": [],
    "source": [
     "#access the segmentation info along with the predicted matches\n",
-    "\n",
-    "\n",
-    "segmentation_info_path = osp.join(\"/local/home/ekoller/R3Scan/files/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
+    "segmentation_info_path = osp.join(data_dir, \"files/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
     "segmentation_info = od3du_utils.read_segmentation_data(segmentation_info_path)\n",
     "id_matches = od3du_utils.read_matching_data(osp.join(data_dir, \"files\"), new_scan_id)\n",
     "\n",
     "for frame, match_list in id_matches.items():\n",
     "    # Extract and store the frame index and corresponding matches\n",
     "\n",
-    "    #assign each pixel to the new value, curr_scan_id , frame number is only for the size\n",
+    "    #generate a pixelwise image \n",
     "    new_img_pixelwise = od3du_utils.generate_pixel_level(segmentation_info[frame], match_list, image_height, image_width)\n",
     "\n",
     "    #quantize to patches\n",
     "    new_img_patchwise = od3du_utils.quantize_to_patch_level(new_img_pixelwise, image_height, image_width, patch_h, patch_w)\n",
-    "    #aggregate to patches and colour it, we want the colours which are used in curr_scan id\n",
+    "    #aggregate to patches and colour it, we want the colours which are used in curr_scan id / reference scene\n",
     "    new_img_colour = create_color_img_from_obj_id(data_dir,curr_scan_id, new_img_patchwise)\n",
     " \n",
     "    \"\"\"\n",
@@ -98,12 +96,11 @@
     "    gt_input_patchwise_path =  osp.join(data_dir,\"files/patch_anno/patch_anno_32_18\", new_scan_id + '.pkl')\n",
     "    with open(gt_input_patchwise_path, 'rb') as file:\n",
     "        gt_input_patchwise = pickle.load(file)\n",
-    "    #print(\"unique numbers in gt_input_colour \", np.unique(gt_input_patchwise[frame]))\n",
     "    gt_input_colour = create_color_img_from_obj_id(data_dir,curr_scan_id,gt_input_patchwise[frame])\n",
     "\n",
     "\n",
     "    # \"\"\"\n",
-    "    # display the newly computed images next to each other\n",
+    "    # display the newly computed images & GT next to each other\n",
     "    # \"\"\"\n",
     "\n",
     "    #display the gt_image and the new patchwise image next to each other\n",
