--- a/notebooks/segment2object_matching/evaluation_segmetn2object_matching_display.ipynb
+++ b/notebooks/segment2object_matching/evaluation_segmetn2object_matching_display.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for the segment to object matching pahse this visualizes the results of the evaluations\n"
+    "This notebook visualizes the evaluation results for the segment to object matching experiments\n"
    ]
   },
   {
@@ -23,18 +23,19 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents, modify the path according to your directory\n",
-    "filepath = \"/local/home/XXXXX/R3Scan/files/Results/Matching_Prediction_train/avg/statistic_predicted_matches.pkl\"\n",
+    "filepath = \"/local/home/ekoller/R3Scan/files/Results/Matching_Prediction_train/avg/statistic_predicted_matches.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
-    "final_precision.append(result.get(\"cosine_iou_metric_precision\", None))\n",
-    "final_recall.append(result.get(\"cosine_iou_metric_recall\", None))\n",
-    "final_f1.append(result.get(\"cosine_mectric_f1\", None))\n",
+    "final_precision.append(result.get(\"metric_precision\", None))\n",
+    "final_recall.append(result.get(\"metric_recall\", None))\n",
+    "final_f1.append(result.get(\"mectric_f1\", None))\n",
     "\n",
-    "\n",
+    "#adjust the parameters if needed\n",
     "k_means=  [1,3,5,7,9] \n",
     "threshold= [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]\n",
     "\n",
+    "#load the dataframe\n",
     "df_precision = pd.DataFrame(final_precision, index=threshold, columns=k_means)\n",
     "df_recall = pd.DataFrame(final_recall, index=threshold, columns=k_means)\n",
     "df_f1 = pd.DataFrame(final_f1, index=threshold, columns=k_means)\n",
