final touches comments

--- a/notebooks/segment2object_matching/evaluation_segmetn2object_matching_display.ipynb
+++ b/notebooks/segment2object_matching/evaluation_segmetn2object_matching_display.ipynb
@@ -23,7 +23,7 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents, modify the path according to your directory\n",
-    "filepath = \"/local/home/ekoller/R3Scan/files/Results/Matching_Prediction_train/avg/statistic_predicted_matches.pkl\"\n",
+    "filepath = \"/local/home/ekoller/R3Scan/files/Results/Matching_Prediction_train/avg/statistic_predicted_matches.pkl\" #adjust the path\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
